manifests/api-service.yml
kind: Service
apiVersion: v1
metadata:
  name: biocontainers-api
spec:
  clusterIP: None
  selector:
    run: api-service
  ports:
    - name: port1
      protocol: TCP
      port: 8080
      targetPort: 8080
